# zotero-mcp-rs

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  opencode.json  skills-lock.json
.claude/skills/: rust-mcp-server-generator
.github/workflows/: docker.yml
.sisyphus/evidence/: task-1-build.txt  task-1-structure.txt  task-10-template-tests.txt  task-11-arxiv-tests.txt  task-12-crossref-tests.txt  task-14-search-build.txt  task-21-tools-list.txt  task-22-http-transport.txt  task-5-identifiers-tests.txt  task-7-zotero-client-tests.txt  task-8-webdav-tests.txt
.sisyphus/notepads/zotero-mcp-rs/: decisions.md  issues.md  learnings.md
src/: config.rs  main.rs  server.rs
src/clients/: mod.rs  webdav.rs  zotero.rs
src/services/: arxiv.rs  crossref.rs  identifiers.rs  mod.rs  oa_sources.rs  pdf.rs  search_engine.rs
src/shared/: formatters.rs  mod.rs  template_engine.rs  types.rs  validators.rs
src/tools/: add_paper.rs  annotations.rs  collections.rs  items.rs  library.rs  mod.rs  rename.rs  search.rs
