[package]
name = "zotero-mcp-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance Zotero MCP server"
license = "MIT"

[[bin]]
name = "zotero-mcp-rs"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
md-5 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
thiserror = "2"
phf = { version = "0.11", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
