[package]
name = "zotero-mcp-rs"
version = "0.1.0"
edition = "2024"
description = "Zotero MCP server in Rust"
license = "MIT"

[[bin]]
name = "zotero-mcp-rs"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
md-5 = "0.11"
clap = { version = "4.6", features = ["derive", "env"] }
regex = "1.12"
thiserror = "2.0"
phf = { version = "0.13", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.51", features = ["full"] }
